==> cennettugce/ADS_Lib/Core/Src/ads131m0x.c <==
#include "ads131m0x.h"

void adcStartup(void)
{
	 //(OPTIONAL) Provide additional delay time for power supply settling
	HAL_Delay(50);

	 //(REQUIRED) Set nRESET pin high for ADC operation
	setSYNC_RESET(HIGH);

	 //(OPTIONAL) Toggle nRESET pin to ensure default register settings.
	 //NOTE: This also ensures that the device registers are unlocked.
	toggleRESET();

     //(REQUIRED) Initialize internal 'registerMap' array with device default settings
	restoreRegisterDefaults();

     //(OPTIONAL) Validate first response word when beginning SPI communication: (0xFF20 | CHANCNT)
	uint16_t response = sendCommand(OPCODE_NULL);

	 //(OPTIONAL) Define your initial register settings here
   // writeSingleRegister(CLOCK_ADDRESS, (CLOCK_DEFAULT & ~CLOCK_OSR_MASK) | CLOCK_OSR_256);

     //(REQUIRED) Configure MODE register settings
     //* NOTE: This function call is required here for this particular code implementation to work.
     //* This function will enforce the MODE register settings as selected in the 'ads131m0x.h' header file.

    //writeSingleRegister(MODE_ADDRESS, MODE_DEFAULT);

     //(OPTIONAL) Read back all registers

	 //(OPTIONAL) Check STATUS register for faults
}

bool readData(adc_channel_data *DataStruct)
{
    int i;
    uint8_t crcTx[3]                        = { 0 };
    uint8_t dataRx[3]                       = { 0 };
    uint8_t bytesPerWord                    = getWordByteLength();

    // (OPTIONAL) Ignore CRC error checking
    uint8_t crcWord = 0;

#ifdef ENABLE_CRC_IN
    // Build CRC word (only if "RX_CRC_EN" register bit is enabled)
    uint16_t crcWordIn = calculateCRC(&DataTx[0], bytesPerWord * 2, 0xFFFF);
    crcTx[0] = upperByte(crcWordIn);
    crcTx[1] = lowerByte(crcWordIn);
#endif

    uint8_t dataTx[3] = { 0x00, 0,0 };      // 1 word, up to 4 bytes long = 4 bytes maximum
    while(HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_10) != GPIO_PIN_RESET){
       }
    // Set the nCS pin LOW
    setCS(LOW);

    HAL_Delay(1);
    // Send NULL word, receive response word

        //dataRx[i] = spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE,(uint8_t*) dataTx,(uint8_t*)dataRx, 3, 100);

    DataStruct->response = combineBytes(dataRx[0], dataRx[1]);

    // (OPTIONAL) Do something with the response (STATUS) word.
    // ...Here we only use the response for calculating the CRC-OUT
    //uint16_t crcWord = calculateCRC(&dataRx[0], bytesPerWord, 0xFFFF);

    // Send 2nd word, receive channel 1 data

        //dataRx[i] = spiSendReceiveByte(crcTx[i]);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, (uint8_t*)crcTx,(uint8_t*) dataRx, 3, 100);


    DataStruct->channel0 = signExtend(&dataRx[0]);
    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

#if (CHANNEL_COUNT > 1)

    // Send 3rd word, receive channel 2 data

       // dataRx[i] = spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, (uint8_t*) 0x00, (uint8_t*)dataRx, bytesPerWord, 100);


    DataStruct->channel1 = signExtend(&dataRx[0]);
    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

#endif
#if (CHANNEL_COUNT > 2)

    // Send 4th word, receive channel 3 data
    for (i = 0; i < bytesPerWord; i++)
    {
       // dataRx[i] = spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, 0x00, dataRx[i], 1, 100);

    }
    DataStruct->channel2 = signExtend(&dataRx[0]);
    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

#endif
#if (CHANNEL_COUNT > 3)

    // Send 5th word, receive channel 4 data
    for (i = 0; i < bytesPerWord; i++)
    {
        //dataRx[i] = spiSendReceiveByte(0x00);
    	HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, 0x00, dataRx[i], 1, 100);

    }
    DataStruct->channel3 = signExtend(&dataRx[0]);
    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

#endif
#if (CHANNEL_COUNT > 4)

    // Send 6th word, receive channel 5 data
    for (i = 0; i < bytesPerWord; i++)
    {
        //dataRx[i] = spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, 0x00, dataRx[i], 1, 100);

    }
    DataStruct->channel4 = signExtend(&dataRx[0]);
    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

#endif
#if (CHANNEL_COUNT > 5)

    // Send 7th word, receive channel 6 data
    for (i = 0; i < bytesPerWord; i++)
    {
       // dataRx[i] = spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, 0x00, dataRx[i], 1, 100);

    }
    DataStruct->channel5 = signExtend(&dataRx[0]);
    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

#endif
#if (CHANNEL_COUNT > 6)

    // Send 8th word, receive channel 7 data
    for (i = 0; i < bytesPerWord; i++)
    {
       // dataRx[i] = spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, 0x00, dataRx[i], 1, 100);

    }
    DataStruct->channel6 = signExtend(&dataRx[0]);
    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

#endif
#if (CHANNEL_COUNT > 7)

    // Send 9th word, receive channel 8 data
    for (i = 0; i < bytesPerWord; i++)
    {
        //dataRx[i] = spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, 0x00, dataRx[i], 1, 100);

    }
    DataStruct->channel7 = signExtend(&dataRx[0]);
    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

#endif

    // Send the next word, receive CRC data
    for (i = 0; i < bytesPerWord; i++)
    {
       // dataRx[i] = spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, 0x00, dataRx[i], 1, 100);

    }
    DataStruct->crc = combineBytes(dataRx[0], dataRx[1]);

     //NOTE: If we continue calculating the CRC with a matching CRC, the result should be zero.
    // * Any non-zero result will indicate a mismatch.

    //crcWord = calculateCRC(&dataRx[0], bytesPerWord, crcWord);

    HAL_Delay(1);
    while(HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_10) != GPIO_PIN_SET){

      }
      setCS(HIGH);

    // Returns true when a CRC error occurs
    return ((bool) crcWord);
}

uint16_t sendCommand(uint16_t opcode)
{
    // Assert if this function is used to send any of the following opcodes
    assert(OPCODE_RREG != opcode);      // Use "readSingleRegister()"
    assert(OPCODE_WREG != opcode);      // Use "writeSingleRegister()"
    assert(OPCODE_LOCK != opcode);      // Use "lockRegisters()"
    assert(OPCODE_UNLOCK != opcode);    // Use "unlockRegisters()"
    assert(OPCODE_RESET != opcode);    //  Use "resetDevice()"

    // Build TX and RX byte array
#ifdef ENABLE_CRC_IN
    uint8_t dataTx[8] = { 0 };      // 2 words, up to 4 bytes each = 8 bytes maximum
    uint8_t dataRx[8] = { 0 };
#else
    uint8_t dataTx[4] = { 0 };      // 1 word, up to 4 bytes long = 4 bytes maximum
    uint8_t dataRx[4] = { 0 };
#endif
    uint8_t numberOfBytes = buildSPIarray(&opcode, 1, dataTx);

     //Set the nCS pin LOW
    setCS(LOW);

    // Send the opcode (and crc word, if enabled)
    int i;

    for (i = 0; i < numberOfBytes; i++)
    {
       //dataRx[i] = spiSendReceiveByte(dataTx[i]);
       HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, dataTx[i], dataRx[i], 1, 100);
    }


     //Set the nCS pin HIGH
    setCS(HIGH);

    // Combine response bytes and return as a 16-bit word
    uint16_t adcResponse = combineBytes(dataRx[0], dataRx[1]);
    return adcResponse;
}

void resetDevice(void)
{
    // Build TX and RX byte array
#ifdef ENABLE_CRC_IN
    uint8_t dataTx[8] = { 0 };      // 2 words, up to 4 bytes each = 8 bytes maximum
    //uint8_t dataRx[8] = { 0 };    // Only needed if capturing data
#else
    uint8_t dataTx[4] = { 0 };      // 1 word, up to 4 bytes long = 4 bytes maximum
    //uint8_t dataRx[4] = { 0 };    // Only needed if capturing data
#endif
    uint16_t opcode         = OPCODE_RESET;
    uint8_t numberOfBytes   = buildSPIarray(&opcode, 1, dataTx);

    uint8_t bytesPerWord    = wlength_byte_values[WLENGTH];
    uint8_t wordsInFrame    = CHANNEL_COUNT + 2;

    uint8_t d_RX;
    // Set the nCS pin LOW
    setCS(LOW);

    // Send the opcode (and CRC word, if enabled)
    int i;
    for (i = 0; i < numberOfBytes; i++)
    {
         //spiSendReceiveByte(dataTx[i]);

        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, dataTx[i], d_RX, 1, 100);

    }

    // Finish sending remaining bytes
    for (i = numberOfBytes; i < (wordsInFrame * bytesPerWord); i++)
    {
       // spiSendReceiveByte(0x00);
        HAL_SPI_TransmitReceive(&ADS131M04_SPI_HANDLE, 0x00,  d_RX, 1, 100);

    }

    // NOTE: The ADS131M0x's next response word should be (0xFF20 | CHANCNT),
    // if the response is 0x0011 (acknowledge of RESET command), then the device
    // did not receive a full SPI frame and the reset did not occur!

    // Set the nCS pin HIGH
    setCS(HIGH);

    // tSRLRST delay, ~1ms with 2.048 MHz fCLK
   HAL_Delay(1);

    // Update register setting array to keep software in sync with device
    restoreRegisterDefaults();

    // Write to MODE register to enforce mode settings
    writeSingleRegister(MODE_ADDRESS, MODE_DEFAULT);
}
